# Squid-N

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  deny.toml  opencode.json
crates/sc-app/: Cargo.toml
crates/sc-app/src/: app.rs  command.rs  design_view.rs  lib.rs  main.rs  section_editor.rs  time_history_view.rs
crates/sc-app/src/tables/: loads.rs  members.rs  nodes.rs  sections.rs
crates/sc-app/src/viewer/: mod.rs
crates/sc-design-jp/: Cargo.toml
crates/sc-design-jp/src/: allowable_stress.rs  ds.rs  eccentricity.rs  holding_capacity.rs  lib.rs  panel_shear.rs
crates/sc-element/: Cargo.toml
crates/sc-element/src/: beam.rs  behavior.rs  concentrated.rs  factory.rs  fiber_elem.rs  lib.rs  member_load.rs  ms.rs  panel.rs  shear_spring.rs  shell.rs  transform.rs
crates/sc-gpu/: Cargo.toml
crates/sc-gpu/src/: gpu_context.rs  lib.rs  pcg.rs  spmv.rs
crates/sc-io/: Cargo.toml
crates/sc-io/src/: checkpoint.rs  lib.rs  manifest.rs  migrate.rs  results.rs  scz.rs  stbridge.rs
crates/sc-mcp/: Cargo.toml
crates/sc-mcp/src/: lib.rs
crates/sc-solver/: Cargo.toml
crates/sc-solver/src/: analysis.rs  arc_length.rs  assemble.rs  constraint.rs  damping.rs  eigen.rs  lib.rs  linear.rs  pushover.rs  timehistory.rs  transaction.rs
crates/squid-n-app/: Cargo.toml
crates/squid-n-app/src/: app.rs  design_view.rs  floor_grillage.rs  lib.rs  main.rs  mn_view.rs  quantity_view.rs  sample.rs  section_editor.rs  summary.rs  theme.rs  time_history_view.rs  ultimate_view.rs
crates/squid-n-app/src/app/: actions.rs  mod.rs  node_grid.rs  panels.rs  tests.rs
crates/squid-n-app/src/grid/: core.rs  mod.rs  tests.rs  widget.rs
crates/squid-n-app/src/tables/: loads.rs  materials.rs  member_details.rs  members.rs  misc_walls.rs  mod.rs  nodes.rs  sections.rs  slabs.rs  steel_attrs.rs  wall_attrs.rs
crates/squid-n-app/src/viewer/: check_ratio.rs  diagram.rs  mod.rs  solid.rs  viewcube.rs
crates/squid-n-app/tests/: perf_probe.rs
crates/squid-n-design-jp/: Cargo.toml
crates/squid-n-design-jp/src/: allowable_stress.rs  brb.rs  capacity_spectrum.rs  ds.rs  eccentricity.rs  floor.rs  holding_capacity.rs  isolator.rs  joint.rs  joint_wiring.rs  lib.rs  material_strength.rs  panel_shear.rs  pca.rs  principal_axis.rs  rc.rs  rc_capacity.rs  src_cft.rs  steel.rs  story_metrics.rs  wall_opening.rs
crates/squid-n-design-jp/src/cft/: mod.rs  tests.rs
crates/squid-n-design-jp/src/joint_wiring/: cold_formed.rs  common.rs  mod.rs  rc_joint.rs  src_panel.rs  steel_panel.rs  tests.rs  wall.rs
crates/squid-n-design-jp/src/material_strength/: mod.rs  steel.rs
crates/squid-n-design-jp/src/quantity/: member.rs  mod.rs  rebar.rs  tests.rs
crates/squid-n-design-jp/src/rc/: beam.rs  beam_nonlinear.rs  bond.rs  column.rs  horizontal_joint.rs  joint.rs  mod.rs  tests.rs  wall.rs  wall_nonlinear.rs
crates/squid-n-design-jp/src/rc/column/: mod.rs
crates/squid-n-design-jp/src/secondary/: eccentricity.rs  eccentricity_analysis.rs  holding_capacity.rs  member_rank.rs  mod.rs  principal_axis.rs  rc_capacity.rs  stiffness_ratio.rs  width_thickness.rs
crates/squid-n-design-jp/src/secondary/eccentricity/: mod.rs  tests.rs
crates/squid-n-design-jp/src/secondary/width_thickness/: member_rank.rs  ratio.rs
crates/squid-n-design-jp/src/srrc/: beam.rs  beam_nonlinear.rs  column.rs  mod.rs  panel_zone.rs  tests.rs
crates/squid-n-design-jp/src/steel/: beam.rs  beam_nonlinear.rs  brace.rs  buckling.rs  cold_formed.rs  column.rs  mod.rs  panel_zone.rs  section.rs
crates/squid-n-design-jp/src/ultimate/: cft.rs  cft_check.rs  cft_nm.rs  geometry.rs  joint.rs  mod.rs  options.rs  rc_axial.rs  rc_check.rs  rc_column_aci.rs  rc_section.rs  rc_shear.rs  rc_shear_ductility.rs  rc_strength.rs  tests.rs
crates/squid-n-element/: Cargo.toml
crates/squid-n-element/src/: beam.rs  concentrated.rs  factory.rs  fiber_elem.rs  lib.rs  member_load.rs  misc_wall.rs  ms.rs  panel.rs  shell.rs  side_column.rs  spring.rs  truss.rs  wall_panel.rs
crates/squid-n-element/src/common/: behavior.rs  mod.rs
crates/squid-n-element/src/factory/: mod.rs  regime.rs  springs.rs  tests.rs  wall_opening.rs
crates/squid-n-element/src/frame/: beam.rs  concentrated.rs  fiber_elem.rs  mod.rs  ms.rs  multi_spring.rs  truss.rs
crates/squid-n-element/src/frame/beam/: mod.rs  (+9 more)
crates/squid-n-element/src/shell/: bmatrix.rs  constitutive.rs  element.rs  element_behavior.rs  frame.rs  geom.rs  mod.rs  recovery.rs  resultants.rs  shape.rs  stiffness.rs  tests.rs
crates/squid-n-element/src/springs/: damper.rs  isolator.rs  mod.rs  panel.rs  shear_spring.rs  spring.rs
crates/squid-n-element/src/wall/: misc_wall.rs  mod.rs  side_column.rs  wall_panel.rs
crates/squid-n-gpu/: Cargo.toml
crates/squid-n-gpu/src/: lib.rs  pcg.rs  spmv.rs
crates/squid-n-io/: Cargo.toml
crates/squid-n-io/src/: checkpoint.rs  migrate.rs  results.rs  scz.rs  stbridge.rs
crates/squid-n-io/src/results/: mod.rs  tests.rs
crates/squid-n-io/src/stbridge/: export.rs  import.rs  mod.rs  section_std.rs  tests.rs
crates/squid-n-mcp/: Cargo.toml
crates/squid-n-mcp/src/: job.rs  lib.rs  persist.rs  query.rs  server.rs  tests.rs
crates/squid-n-mcp/src/job/: design_check.rs  eigen.rs  linear_static.rs  mod.rs  pushover.rs  time_history.rs  ultimate.rs
crates/squid-n-section/: Cargo.toml
crates/squid-n-section/data/: japan_steel_sections.csv
crates/squid-n-section/src/: catalog.rs  fiber.rs  lib.rs  mn_surface.rs  shape.rs
crates/squid-n-section/src/mn_surface/: fibers.rs  mod.rs
crates/squid-n-solver/: Cargo.toml
crates/squid-n-solver/examples/: parallel_bench.rs
crates/squid-n-solver/src/: analysis.rs  assemble.rs  constraint.rs  construction.rs  damage.rs  damping.rs  eigen.rs  lib.rs  linear.rs  pushover.rs  strength_loss.rs  timehistory.rs  transaction.rs
crates/squid-n-solver/src/common/: constraint.rs
crates/squid-n-solver/src/dynamic/: damping.rs  lumped_mass.rs  mod.rs  phase_diff.rs
crates/squid-n-solver/src/statics/: construction.rs
crates/squid-n-solver/tests/: parallel_batch.rs
(+352 files in other folders)
