[workspace]
resolver = "2"
members = [
    "crates/squid-n-core", "crates/squid-n-math", "crates/squid-n-io",
    "crates/squid-n-material", "crates/squid-n-section", "crates/squid-n-element",
    "crates/squid-n-skeleton", "crates/squid-n-load", "crates/squid-n-solver",
    "crates/squid-n-design-jp", "crates/squid-n-gpu", "crates/squid-n-ml",
    "crates/squid-n-edit", "crates/squid-n-mcp", "crates/squid-n-app",
    "xtask",
]

[workspace.dependencies]
faer        = "0.24"
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"
smallvec    = { version = "1", features = ["serde"] }
thiserror   = "1"
zip         = "2"
sha2        = "0.10"
approx      = "0.5"
insta       = "1"
arrow       = "59"
parquet     = "59"
egui        = "0.34"
eframe      = "0.34"
egui_extras = "0.34"
egui_plot   = "0.35"
rmcp        = { version = "1", features = ["server", "macros", "transport-io"] }
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
schemars    = "0.8"
bincode     = "1"
anyhow      = "1"
toml        = "0.8"
quick-xml   = "0.41"

[profile.release]
lto = "thin"
codegen-units = 1
