[package]
name = "sc-design-jp"
version = "0.0.1"
edition = "2021"

[features]
# P7（二次設計）は完成済みフェーズで重い依存も無いため default に含める。
# 非デフォルトのまま放置すると通常の cargo test/build で検証されず腐る（実際 P7 は
# コンパイル不能のまま「✅」と誤報告されていた）。再発防止のため default 化する。
default = ["p7"]
p7 = []
# P12 限界耐力計算（容量スペクトル法）。未実装・将来フェーズなので opt-in のまま。
p12 = []

[dependencies]
sc-core = { path = "../sc-core" }
sc-element = { path = "../sc-element" }
sc-solver = { path = "../sc-solver" }
sc-load = { path = "../sc-load" }

[dev-dependencies]
approx   = { workspace = true }
smallvec = { workspace = true }
