[package]
name = "sc-io"
version = "0.0.1"
edition = "2021"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
rmp-serde  = { workspace = true }
zip        = { workspace = true }
sha2       = { workspace = true }
bincode    = { workspace = true }
thiserror  = { workspace = true }
arrow      = { workspace = true }
parquet    = { workspace = true }
sc-core    = { path = "../sc-core" }
sc-element = { path = "../sc-element" }

[dev-dependencies]
sc-element = { path = "../sc-element" }
smallvec   = { workspace = true }
