[package]
name = "sc-solver"
version = "0.0.1"
edition = "2021"

[dependencies]
sc-core   = { path = "../sc-core" }
sc-math   = { path = "../sc-math" }
sc-element = { path = "../sc-element" }
sc-load   = { path = "../sc-load" }
faer      = { workspace = true }
smallvec  = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
