[package]
name = "squid-n-app"
version = "0.0.1"
edition = "2021"
license = "MIT"

[features]
default = []
gui = ["egui", "eframe", "egui_extras", "egui_plot", "dep:rfd"]

[[bin]]
name = "squid-n"
path = "src/main.rs"
required-features = ["gui"]

[dependencies]
squid-n-core = { path = "../squid-n-core" }
squid-n-element = { path = "../squid-n-element" }
squid-n-solver = { path = "../squid-n-solver" }
squid-n-design-jp = { path = "../squid-n-design-jp" }
squid-n-edit = { path = "../squid-n-edit" }
squid-n-section = { path = "../squid-n-section" }
squid-n-load = { path = "../squid-n-load" }
squid-n-io = { path = "../squid-n-io" }
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
egui_extras = { workspace = true, optional = true }
egui_plot = { workspace = true, optional = true }
smallvec = { workspace = true }
rfd = { version = "0.17", optional = true }
