[package]
name = "squid-n-design-jp"
version = "0.0.1"
edition = "2021"
license = "MIT"

[features]
# P7（二次設計）は完成済みフェーズで重い依存も無いため default に含める。
# 非デフォルトのまま放置すると通常の cargo test/build で検証されず腐る（実際 P7 は
# コンパイル不能のまま「✅」と誤報告されていた）。再発防止のため default 化する。
default = ["p7"]
p7 = []
# P12 限界耐力計算（容量スペクトル法）。未実装・将来フェーズなので opt-in のまま。
p12 = []

[dependencies]
squid-n-core = { path = "../squid-n-core" }
squid-n-element = { path = "../squid-n-element" }
squid-n-solver = { path = "../squid-n-solver" }
squid-n-load = { path = "../squid-n-load" }

[dev-dependencies]
approx   = { workspace = true }
smallvec = { workspace = true }
# RC 簡易 Mu（rc_mu_simple）とファイバ解析 Mu（build_rc_member_skeleton）の突合テスト用。
# Layer 5（design-jp）→ Layer 0/2（material/skeleton）の dev-dependency は
# xtask check-deps のレイヤ規則上も問題ない（上位→下位のみ許可）。
squid-n-material = { path = "../squid-n-material" }
squid-n-skeleton = { path = "../squid-n-skeleton" }