[package]
name = "squid-n-gpu"
version = "0.0.1"
edition = "2021"
license = "MIT"

[features]
default = []
gpu = ["dep:wgpu", "dep:cubecl", "dep:cubecl-runtime"]

[dependencies]
squid-n-math = { path = "../squid-n-math" }
faer    = { workspace = true }

wgpu   = { version = "29", optional = true }
cubecl = { version = "0.3", optional = true, default-features = false, features = ["wgpu", "std"] }
# cubecl (with default-features disabled) does not itself request cubecl-runtime's
# "channel-mpsc" feature, but cubecl-runtime's tune/tuner.rs module unconditionally
# uses `async_channel` regardless of which channel feature is active (see
# https://github.com/tracel-ai/cubecl/blob/main/crates/cubecl-runtime/src/tune/tuner.rs).
# Depend on cubecl-runtime directly so Cargo's feature unification enables
# "channel-mpsc" (and thus the `async-channel` dependency) for the whole graph.
cubecl-runtime = { version = "0.3", optional = true, default-features = false, features = ["channel-mpsc"] }

[dev-dependencies]
approx = { workspace = true }