[package]
name = "squid-n-io"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
rmp-serde  = { workspace = true }
zip        = { workspace = true }
sha2       = { workspace = true }
bincode    = { workspace = true }
thiserror  = { workspace = true }
arrow      = { workspace = true }
parquet    = { workspace = true }
quick-xml  = { workspace = true }
smallvec   = { workspace = true }
encoding_rs = { workspace = true }
squid-n-core    = { path = "../squid-n-core" }
squid-n-element = { path = "../squid-n-element" }

[dev-dependencies]
squid-n-element = { path = "../squid-n-element" }