[package]
name = "squid-n-section"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
squid-n-core = { path = "../squid-n-core" }
squid-n-material = { path = "../squid-n-material" }
serde = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }